examples/errors/1044-errors-generic-failable-composition.sx
// Generic function with a value-carrying `!` return composes (ERR E5.1
// sub-feature 8). A `$T: Type` generic whose return is `(T, !E)` monomorphizes
// per call: `return try f()` propagates the closure's error, and each
// monomorphization's success value flows through as the concrete `T`.
// (Regression: confirms issue 0062 was an invalid-syntax repro — the bug only
// appeared with the non-generic `T: Type` form; the `$T` form works.)

#import "modules/std.sx";

E :: error { Bad }

wrap :: ($T: Type, f: Closure() -> (T, !E)) -> (T, !E) { return try f(); }

main :: () -> i32 {
    // success, consumed by catch
    print("catch={}\n", wrap(i32, closure(() -> (i32, !E) { return 7; })) catch (e) -1);   // 7

    // success, consumed by destructure (binds value + error slot); the value
    // slot is read only under an `if !err` guard (ERR E1.8 path-sensitivity)
    r, err := wrap(i32, closure(() -> (i32, !E) { return 9; }));
    if !err { print("destr={} ok=true\n", r); }                                           // destr=9 ok=true

    // failure path: the raised tag propagates through the generic `try`
    print("fail={}\n", wrap(i32, closure(() -> (i32, !E) { raise error.Bad; }) ) catch (e) -1); // -1

    // a second monomorphization at a different T
    print("u8={}\n", wrap(u8, closure(() -> (u8, !E) { return 200; })) catch (e) 0);         // 200
    return 0;
}
